Update ThreadSafeSourceCodeDesignPatterns.java